<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etCodigoIngresso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="226dp"
        android:hint="@string/codigoIngresso"
        app:layout_constraintBottom_toTopOf="@+id/cbVip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTaxaConv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/taxaConv"
        app:layout_constraintBottom_toTopOf="@+id/etFuncao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorIngresso" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etValorIngresso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/valorIngresso"
        app:layout_constraintBottom_toTopOf="@+id/etTaxaConv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoIngresso" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="311dp"
        android:text="@string/comprarIngresso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cbVip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFuncao" />

    <CheckBox
        android:id="@+id/cbVip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="312dp"
        android:text="@string/vip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnComprar"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoIngresso" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFuncao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="19dp"
        android:hint="@string/funcao"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaxaConv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Anthony Siqueira de Oliveira"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="33dp"
        android:text="1110482313032"
        app:layout_constraintBottom_toTopOf="@+id/etCodigoIngresso"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>